<?xml version="1.0"?>
<package format="2">
  <name>v_repExtRosControl</name>
  <version>0.0.1</version>
  <description>The v_repExtRosControl package</description>

  <maintainer email="piotnikiel@gmail.com">Piotr Nikiel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
	<depend>joint_limits_interface</depend>
</package>
